--- a/blockBreaker/Assembly-CSharp-vs.csproj
+++ b/blockBreaker/Assembly-CSharp-vs.csproj
@@ -47,7 +47,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\LoseCollider.cs" />
      <Compile Include="Assets\Scripts\MusicPlayer.cs" />
+     <Compile Include="Assets\Scripts\ball.cs" />
+     <Compile Include="Assets\Scripts\brick.cs" />
+     <Compile Include="Assets\Scripts\paddle.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity 4.6/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.9/Standalone/UnityEngine.UI.dll</HintPath>
  </Reference>
